# vue-fastapi-boilerplate

./: .gitignore  README.md  agents.md  llms.txt
.github/agents/: code_review_agent.md
.github/workflows/: ai_code_review.yml  test.yml  test_backend.yml
backend/: .env.example  .gitignore  alembic.ini  local.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: e6e618335a9e_create_student_table.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  student.py
backend/app/routers/: router_base.py  students.py
backend/app/schemas/: student.py
backend/app/services/: crud_base.py  student_service.py
backend/tests/: conftest.py  factories.py  generic_test_base.py  test_migrations.py  test_student.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/router/: index.js
frontend/src/services/: StudentService.js  SystemService.js  api.js  apiClient.js  index.js
frontend/src/views/: HomeView.vue  StudentsView.vue
